# todofs

./: Dockerfile  README.md  main.py  pyproject.toml
db/: querries.py
tests/: test_main.py
