[tool.poetry]
name = "to-do-be"
version = "0.1.0"
description = ""
authors = ["Sandler, Alexey (as371x) <as371x@intl.att.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.8.0"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
